test/positive/feature_finalmethods.java

public class feature_finalmethods {
  public feature_finalmethods() {}
  public final int m() {
    return 42;
  }
}

