test/negative/feature_throws.java

public class feature_throws {
  public feature_throws() {}
  public int m() throws java.lang.Exception {
    return 42;
  }
}

